Fix CSS on main on iPhone X

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -13,18 +13,17 @@ main {
   @media screen and (min-width: 640px) {
     flex-direction: row;
   }
-  @media screen and (min-width: 640px) {
-    #iPadBorder {
-      background: black;
-      opacity: 0.6;
-      position: absolute;
-      z-index: 1010;
-      top: 0px;
-      left: 0px;
-      right: 0px;
-      height: constant(safe-area-inset-top);
-      height: env(safe-area-inset-top);
-    }
+
+  #iPadBorder {
+    background: black;
+    opacity: 0.6;
+    position: absolute;
+    z-index: 1010;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    height: constant(safe-area-inset-top);
+    height: env(safe-area-inset-top);
   }
 
   aside.navigation {
@@ -60,11 +59,6 @@ main {
       @media screen and (min-width: 640px) {
         display: none;
       }
-    }
-    .drawer {
-      /* iOS 11 && iOS 11.2+ */
-      padding-top: constant(safe-area-inset-top);
-      padding-top: env(safe-area-inset-top);
     }
     nav {
       /* iOS 11 && iOS 11.2+ */
@@ -111,4 +105,9 @@ main {
       // CONTENT STUFF ARE DEFINED IN CONTENT.SCSS FILE
     }
   }
+}
+.drawer {
+  /* iOS 11 && iOS 11.2+ */
+  padding-top: constant(safe-area-inset-top) !important;
+  padding-top: env(safe-area-inset-top) !important;
 }
